fixed homepage styling with the graphic and alignment by adding into a modules folder

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -68,76 +68,8 @@ span:hover:after {
   left: -10px;
 }  */
 
-/* styling for a large graphic on the homepage with multi-layer text animation */
-  .hometext{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Poppins', sans-serif;
-    display: block;
-    color: #cfcecf;
-    font-size: 124px;
-    letter-spacing: 8px;
-  }
-  
-  .hometext::before {
-    content: "CHORE MANAGER";
-    position: absolute;
-    color: transparent;
-    background-image: repeating-linear-gradient(
-      45deg,
-      transparent 0,
-      transparent 2px,
-      rgb(63, 62, 62) 2px,
-      rgb(63, 62, 62) 4px
-    );
-    -webkit-background-clip: text;
-    top: 0px;
-    left: 0;
-    z-index: -1;
-    transition: 1s;
-  }
-  
-  .hometext::after {
-    content: "CHORE MANAGER";
-    position: absolute;
-    color: transparent;
-    background-image: repeating-linear-gradient(
-      135deg,
-      transparent 0,
-      transparent 2px,
-      rgb(63, 62, 62) 2px,
-      rgb(63, 62, 62) 4px
-    );
-    -webkit-background-clip: text;
-    top: 0px;
-    left: 0px;
-    transition: 1s;
-  }
-  
-  .hometext:hover:before {
-    top: 10px;
-    left: 10px;
-  }
-  
-  .hometext:hover:after {
-    top: -10px;
-    left: -10px;
-  } 
 
-  .home-btn-learnmore{
-    position: absolute;
-    left: 47%;
-    top: 80%;
-   
-  }
-  
-.home-quote{
-  position: center;
-  top: 25%;
-}
- 
+
 
 /* .cp-stamp {
   font-size: 100px;
@@ -165,5 +97,7 @@ span:hover:after {
  }
 
  .navbar-logo{
-width: 80px;
+width: 70px;
  }
+
+ 
